Fix cirular label and layout

--- a/GP16Editor/AppShell.xaml
+++ b/GP16Editor/AppShell.xaml
@@ -4,11 +4,11 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:GP16Editor"
+    x:DataType="local:AppShell"
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        Content="{Binding TheMainPage}"
         Route="MainPage" />
-
 </Shell>
