--- a/GP16Editor/Views/AutoPanpotView.xaml
+++ b/GP16Editor/Views/AutoPanpotView.xaml
@@ -9,11 +9,8 @@
         <VerticalStackLayout>
         <Label Text="Auto Panpot" FontAttributes="Bold" />
 
-        <Label Text="Rate" />
-        <controls:CircularSlider Minimum="0" Maximum="100" Value="{Binding Rate}" />
-
-        <Label Text="Depth" />
-        <controls:CircularSlider Minimum="0" Maximum="100" Value="{Binding Depth}" />
+        <controls:CircularSlider LabelText="Rate" Minimum="0" Maximum="100" Value="{Binding Rate}" />
+        <controls:CircularSlider LabelText="Depth" Minimum="0" Maximum="100" Value="{Binding Depth}" />
 
         <Picker Title="Mode" SelectedItem="{Binding Mode}">
             <Picker.ItemsSource>
