--- a/GP16Editor/Views/PickingFilterView.xaml
+++ b/GP16Editor/Views/PickingFilterView.xaml
@@ -9,14 +9,9 @@
         <VerticalStackLayout>
         <Label Text="Picking Filter" FontAttributes="Bold" />
 
-        <Label Text="Sensitivity" />
-        <controls:CircularSlider Minimum="0" Maximum="100" Value="{Binding Sensitivity}" />
-
-        <Label Text="Cutoff Frequency" />
-        <controls:CircularSlider Minimum="0" Maximum="100" Value="{Binding CutoffFrequency}" />
-
-        <Label Text="Q Control" />
-        <controls:CircularSlider Minimum="1.0" Maximum="5.0" Value="{Binding QControl}" />
+        <controls:CircularSlider LabelText="Sensitivity" Minimum="0" Maximum="100" Value="{Binding Sensitivity}" />
+        <controls:CircularSlider LabelText="Cutoff Frequency" Minimum="0" Maximum="100" Value="{Binding CutoffFrequency}" />
+        <controls:CircularSlider LabelText="Q Control" Minimum="1.0" Maximum="5.0" Value="{Binding QControl}" />
 
         <Picker Title="Up/Down" SelectedItem="{Binding UpDown}">
             <Picker.ItemsSource>
