--- a/GP16Editor/Views/PitchShifterView.xaml
+++ b/GP16Editor/Views/PitchShifterView.xaml
@@ -9,20 +9,11 @@
         <VerticalStackLayout>
         <Label Text="Pitch Shifter" FontAttributes="Bold" />
 
-        <Label Text="Chromatic (semitones)" />
-        <controls:CircularSlider Minimum="-12" Maximum="12" Value="{Binding Chromatic}" />
-
-        <Label Text="Fine" />
-        <controls:CircularSlider Minimum="-50" Maximum="50" Value="{Binding Fine}" />
-
-        <Label Text="Balance" />
-        <controls:CircularSlider Minimum="0" Maximum="100" Value="{Binding Balance}" />
-
-        <Label Text="Feedback" />
-        <controls:CircularSlider Minimum="0" Maximum="100" Value="{Binding Feedback}" />
-
-        <Label Text="Pre Delay (ms)" />
-        <controls:CircularSlider Minimum="0" Maximum="100" Value="{Binding PreDelay}" />
+        <controls:CircularSlider LabelText="Chromatic (semitones)" Minimum="-12" Maximum="12" Value="{Binding Chromatic}" />
+        <controls:CircularSlider LabelText="Fine" Minimum="-50" Maximum="50" Value="{Binding Fine}" />
+        <controls:CircularSlider LabelText="Balance" Minimum="0" Maximum="100" Value="{Binding Balance}" />
+        <controls:CircularSlider LabelText="Feedback" Minimum="0" Maximum="100" Value="{Binding Feedback}" />
+        <controls:CircularSlider LabelText="Pre Delay (ms)" Minimum="0" Maximum="100" Value="{Binding PreDelay}" />
     </VerticalStackLayout>
     </Border>
 </ContentView>
