--- a/GP16Editor/App.xaml
+++ b/GP16Editor/App.xaml
@@ -7,8 +7,9 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
+                <ResourceDictionary Source="Resources/Styles/LightTheme.xaml" />
+                <ResourceDictionary Source="Resources/Styles/DarkTheme.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <converters:BoolToOpacityConverter x:Key="BoolToOpacityConverter" />
             <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
