--- a/GP16Editor/AppShell.xaml
+++ b/GP16Editor/AppShell.xaml
@@ -8,7 +8,7 @@
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
-        Title="Home"
+        Title=""
         Content="{Binding TheMainPage}"
         Route="MainPage" />
 </Shell>
